--- a/cv_6/__latexindent_temp.tex
+++ b/cv_6/__latexindent_temp.tex
@@ -180,14 +180,7 @@
 
 \section{Seznam použitých přístrojů}
 \begin{itemize}
-    \item V\tsub{2} - voltmetr číslicový, typ ..., přesnost ...
-    \item $\mu$A\tsub{1} - mikroampérmetr magnetoelektrický, tř.přes. ..., rozsah ...
-    \item $\mu$A\tsub{2} - mikroampérmetr číslicový, typ ..., přesnost ...
-    \item R - přesný rezistor nebo odporová dekáda, přesnost 0,1\,\% (příp. 0,2\,\%)
-    \item Př1 - přípravek s odporovým děličem a polovodičovou diodou
-    \item Př2 - přípravek s operačním zesilovačem
-    \item U\tsub{1} - zdroj proměnného stejnosměrného napětí s číslicově nastavitelnou hodnotou 
-    \item NZ - napájecí zdroj pro OZ
+    \item 
 \end{itemize}
 
 \section{Teoretický úvod}
