--- a/cv_6/EMB-cv_6.tex
+++ b/cv_6/EMB-cv_6.tex
@@ -39,7 +39,7 @@
 \titleclass{\subsubsubsection}{straight}[\subsection]
 \newcounter{subsubsubsection}[subsubsection]
 \renewcommand\thesubsubsubsection{\thesubsubsection.\arabic{subsubsubsection}}
-\renewcommand\theparagraph{\thesubsubsubsection.\arabic{paragraph}} % optional; useful if paragraphs are to be numbered
+\renewcommand\theparagraph{\thesubsubsubsection.\arabic{paragraph}} % optional useful if paragraphs are to be numbered
 
 
 %------------------------ čtvrtá a pátá úroveň nadpisu ---------------------------
@@ -190,7 +190,7 @@
 \begin{itemize}
     \item V\tsub{2} - voltmetr číslicový, typ ..., přesnost ...
     \item $\mu$A\tsub{1} - mikroampérmetr magnetoelektrický, tř.přes. 0,5, rozsah 150 \tmu A
-    \item $\mu$A\tsub{2} - mikroampérmetr číslicový, typ GDM-8145 přesnost \tpm (0,3 \% + 2 digity), rozsah 200\,\tmu A a 2\,mA
+    \item $\mu$A\tsub{2} - mikroampérmetr číslicový, typ GDM-8145 přesnost \tpm (0,3 \% z rozsahu + 4 digity), rozsah 200\,\tmu A a 2\,mA
     \item R - přesný rezistor nebo odporová dekáda, přesnost 0,1\,\% (příp. 0,2\,\%)
     \item Př1 - přípravek s odporovým děličem a polovodičovou diodou
     \item Př2 - přípravek s operačním zesilovačem
@@ -210,20 +210,21 @@ Při měření malých proudů ručními ampérmetry nastává chyba měření. 
 
 Změřená data jsou v tabulce \ref{tab:zmereno}.
 \begin{table}[h!]
+    \centering
     \begin{tabular}{|c|c|c|c|c|}
         \hline
         \rule{0pt}{2.5ex}
         \multirow{2}{*}{Vstupní napětí $\frac{U}{\textrm{V}}$}& Ručičkový \tmu ampérmetr$\frac{I}{\mu\textrm{A}}$ 	&GDM-8145 $\frac{I}{\mu\textrm{A}}$	&GDM-8145 $\frac{I}{\textrm{mA}}$	&IU Převodník $\frac{U}{\textrm{V}}$  \\[.7ex]
         & rozsah  150~μA & rozsah 200~μA & rozsah  2~mA & rozsah  2 V\\\hline\hline
-        0,2&0,9&1,33&0,0012&-0,0155\\\hline
-        0,3&1,4&2,36&0,0024&-0,0277\\\hline
-        0,4&2&3,69&0,0041&-0,0448\\\hline
-        0,5&2,6&5,39&0,0064&-0,0684\\\hline
-        0,6&3,3&7,48&0,0095&-0,1012\\\hline
-        0,7&4&10&0,0136&-0,1459\\\hline
-        0,8&4,8&12,96&0,0190&-0,2062\\\hline
-        0,9&5,25&16,37&0,0260&-0,2867\\\hline
-        1&6,4&20,23&0,0349&-0,3926\\\hline
+        0,2 &0,9    &1,33   &0,0012 &-0,0155     \\\hline
+        0,3 &1,4    &2,36   &0,0024 &-0,0277     \\\hline
+        0,4 &2      &3,69   &0,0041 &-0,0448       \\\hline
+        0,5 &2,6    &5,39   &0,0064 &-0,0684     \\\hline
+        0,6 &3,3    &7,48   &0,0095 &-0,1012     \\\hline
+        0,7 &4      &10     &0,0136 &-0,1459         \\\hline
+        0,8 &4,8    &12,96  &0,0190 &-0,2062    \\\hline
+        0,9 &5,25   &16,37  &0,0260 &-0,2867   \\\hline
+        1   &6,4    &20,23  &0,0349 &-0,3926      \\\hline
     
     \end{tabular}
     \caption{Změřené hodnoty}
@@ -249,23 +250,59 @@ kde $I_{out}$ je proud protékající diodou, $U_{out}$ je měřené napětí a 
 Jelikož hodnoty napětí byly měřeny ve voltech a jednotné jednotky jsou \tmu A, je potřeba změřené napětí vydělit $-0,1\,\frac{\textrm{A}}{\textrm{V}}$. Přepočtené hodnoty jsou zapsána v tabulce \ref{tab:prepocteno} a zobrazena v grafu \ref{graf:hodnoty}.
 
 \begin{table}[h!]
+    \centering
     \begin{tabular}{|c|c|c|c|c|}
         \hline
         \rule{0pt}{2.5ex}
         \multirow{2}{*}{Napětí na děliči $\frac{U}{\textrm{V}}$}& Ručičkový \tmu ampérmetr$\frac{U}{\mu\textrm{A}}$ 	&GDM-8145 $\frac{U}{\mu\textrm{A}}$	&GDM-8145 $\frac{U}{\mu\textrm{A}}$	&IU Převodník $\frac{I}{\mu\textrm{A}}$  \\[.7ex]
         & rozsah  150~μA & rozsah 200~μA & rozsah  2~mA & rozsah  2 V\\\hline\hline
-        0,02    &0,9    &1,33   &1,2    &1,55\\\hline
-        0,03    &1,4    &2,36   &2,4    &2,77\\\hline
-        0,04    &2      &3,69   &4,1    &4,48\\\hline
-        0,05    &2,6    &5,39   &6,4    &6,84\\\hline
-        0,06    &3,3    &7,48   &9,5    &10,12\\\hline
-        0,07    &4      &10     &13,6   &14,59\\\hline
-        0,08    &4,8    &12,96  &19     &20,62\\\hline
-        0,09    &5,25   &16,37  &26     &28,67\\\hline
-        0,1     &6,4    &20,23  &34,9   &39,26\\\hline
+        0,02    &0,9    &1,33   &1,2    &1,55   \\\hline
+        0,03    &1,4    &2,36   &2,4    &2,77   \\\hline
+        0,04    &2      &3,69   &4,1    &4,48   \\\hline
+        0,05    &2,6    &5,39   &6,4    &6,84   \\\hline
+        0,06    &3,3    &7,48   &9,5    &10,12  \\\hline
+        0,07    &4      &10     &13,6   &14,59  \\\hline
+        0,08    &4,8    &12,96  &19     &20,62  \\\hline
+        0,09    &5,25   &16,37  &26     &28,67  \\\hline
+        0,1     &6,4    &20,23  &34,9   &39,26  \\\hline
     \end{tabular}
     \caption{Přepočtené hodnoty}
     \label{tab:prepocteno}
+\end{table}
+
+Nejistotu pro ručičkový ampérmetr spočítáme pomocí vzorce
+\begin{equation}
+    u(I_{rv}) = \frac{TP\cdot rozsah}{100\cdot\sqrt{3}} = \frac{0,5\cdot 150\cdot 10^{-6}}{100\cdot\sqrt{3}} = 0,433 \mu ~\textrm{A.}
+\end{equation}
+
+Nejistotu pro číslicový ampérmetr s rozsahem 200\,μA spočítáme následovně:
+\begin{equation}
+    i(I_{čv}) = \frac{\delta_1 X + \delta_2 M}{100\sqrt{3}} = \frac{0,3\%\cdot I+2\cdot\frac{200}{20000}}{100\sqrt{3}}\,\mu \textrm{A}
+\end{equation}
+a pro rozsah 2\,mA
+\begin{equation}
+    i(I_{čv}) = \frac{\delta_1 X + \delta_2 M}{100\sqrt{3}} = \frac{0,3\,\%\cdot I[\mu \textrm{A}]+2\cdot\frac{2\cdot 10^3}{20000}}{100\sqrt{3}}\, \mu \textrm{A.}
+\end{equation}
+
+Výsledné nejistoty jsou v tabulce \ref{tab:nejistoty}.
+\begin{table}
+    \centering
+    \begin{tabular}{|c|c|c|}
+        \hline
+        \multirow{2}{*}{Napětí na děliči}& GDM-8145 	&GDM-8145 \\[.7ex]
+        & rozsah 200~μA & rozsah  2~mA \\\hline\hline
+        0,02&0,000139&0,001175\\\hline
+        0,03&0,000156&0,001196\\\hline
+        0,04&0,000179&0,001226\\\hline
+        0,05&0,000209&0,001266\\\hline
+        0,06&0,000245&0,001319\\\hline
+        0,07&0,000289&0,001390\\\hline
+        0,08&0,000340&0,001484\\\hline
+        0,09&0,000399&0,001605\\\hline
+        0,10&0,000466&0,001759\\\hline
+    \end{tabular}
+    \caption{Nejistoty měření pro různé rozsahy a hodnoty}
+    \label{tab:nejistoty}
 \end{table}
 
 \begin{graf}[h!]
@@ -315,15 +352,15 @@ Jednotlivé relativní chyby pro analogový ampérmetr a číslicový ampérmetr
         \rule{0pt}{2.5ex}
         \multirow{2}{*}{Napětí na děliči} &Ručičkový \tmu ampérmetr	&GDM-8145 	&GDM-8145 \\[.7ex]
         & rozsah  150~μA & rozsah 200~μA & rozsah  2~mA \\\hline\hline
-        0,02&-0,419354839&-0,141935484&-0,225806452 \\\hline
-        0,03&-0,494584838&-0,14801444&-0,133574007  \\\hline
-        0,04&-0,553571429&-0,176339286&-0,084821429 \\\hline
-        0,05&-0,619883041&-0,211988304&-0,064327485 \\\hline
-        0,06&-0,673913043&-0,260869565&-0,061264822 \\\hline
-        0,07&-0,725839616&-0,31459904&-0,067854695  \\\hline
-        0,08&-0,767216295&-0,371483996&-0,0785645   \\\hline
-        0,09&-0,816881758&-0,429019881&-0,093128706 \\\hline
-        0,10&-0,836984208&-0,484717269&-0,111054508  \\\hline
+        0,02 & -0,4194 & -0,1419 & -0,2258 \\\hline
+        0,03 & -0,4946 & -0,1480 & -0,1336 \\\hline 
+        0,04 & -0,5536 & -0,1763 & -0,0848 \\\hline 
+        0,05 & -0,6199 & -0,2120 & -0,0643 \\\hline
+        0,06 & -0,6739 & -0,2609 & -0,0613 \\\hline
+        0,07 & -0,7258 & -0,3146 & -0,0679 \\\hline
+        0,08 & -0,7672 & -0,3715 & -0,0786 \\\hline
+        0,09 & -0,8169 & -0,4290 & -0,0931 \\\hline
+        0,1  & -0,8370 & -0,4847 & -0,1111 \\\hline
     \end{tabular}
     \caption{Relativní chyby metody}
     \label{tab:rel}
@@ -346,18 +383,78 @@ V absolutní hodnotě jsou data v tabulce \ref{tab:rel_percent}
         0,09&81,69&42,90&9,31   \\\hline
         0,10&83,70&48,47&11,11  \\\hline
     \end{tabular}
-    \caption{Relativní chyby metody}
+    \caption{Relativní chyby metody v procentech}
     \label{tab:rel_percent}
 \end{table}
 Chyba metody je zobrazena v grafu \ref{graf:chyba}.
-\begin{figure}
+\begin{graf}
     \centering
     \includegraphics[width=.8\textwidth]{graf_chyba.pdf}
     \caption{Relativní chyba metody v závislosti na měřeném napětí}
     \label{graf:chyba}
-\end{figure}
+\end{graf}
+Z tabulky \ref{tab:rel} můžeme spočítat nejistotu podle vzorce \ref{eq:chyba2nejistota}, čímž dostaneme tabulku \ref{tab:chyba2nejistota}.
+\begin{equation}
+    u_b(I)=\frac{\Delta}{\sqrt{3}}
+    \label{eq:chyba2nejistota}
+\end{equation}
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{|c|c|c|c|}
+        \hline
+        \rule{0pt}{2.5ex}
+        \multirow{2}{*}{Napětí na děliči} &Ručičkový \tmu ampérmetr	$\frac{U}{\mu\textrm{A}}$&GDM-8145 	$\frac{U}{\mu\textrm{A}}$&GDM-8145 $\frac{U}{\mu\textrm{A}}$\\[.7ex]
+        & rozsah  150~μA & rozsah 200~μA & rozsah  2~mA \\\hline\hline
+        0,02 & 0,2421 & 0,0819 & 0,1304 & \\\hline
+        0,03 & 0,2855 & 0,0855 & 0,0771 & \\\hline
+        0,04 & 0,3196 & 0,1018 & 0,0490 & \\\hline
+        0,05 & 0,3579 & 0,1224 & 0,0371 & \\\hline
+        0,06 & 0,3891 & 0,1506 & 0,0354 & \\\hline
+        0,07 & 0,4191 & 0,1816 & 0,0392 & \\\hline
+        0,08 & 0,4430 & 0,2145 & 0,0454 & \\\hline
+        0,09 & 0,4716 & 0,2477 & 0,0538 & \\\hline
+        0,10 & 0,4832 & 0,2799 & 0,0641 & \\\hline
+    \end{tabular}
+    \caption{Nejistota měření vypočtená z chyby měření}
+    \label{tab:chyba2nejistota}
+\end{table}
+
+\subsection{Měření vnitřního odporu ampérmetru}
+Pro jednotlivé kroky napětí použijeme ohmův zákon pro výpočet odporu diody a tento odpor následně odečteme od celkového odporu tj. i s ampérmetrem. Platí tedy následující rovnice:
+\begin{equation}
+    R_A=\frac{U}{I_A} - \frac{U}{I_ref},
+\end{equation}
+kde $U$ je napětí na děliči, $I_A$ je proud změřený ampérmetrem, který nás zajímá a $I_{ref}$ je referenční hodnota proudu - proud změřená UI převodníkem. Dosazením dat do vzorce dostaneme následující tabulku \ref{tab:odpor} a graf \ref{graf:odpor}.
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{|c|c|c|c|}
+        \hline
+        \rule{0pt}{2.5ex}
+        \multirow{2}{*}{Napětí na děliči} &Ručičkový \tmu ampérmetr	$\frac{R}{\Omega}$ &GDM-8145 $\frac{R}{\Omega}$	&GDM-8145 $\frac{R}{\Omega}$\\[.7ex]
+        & rozsah  150~μA & rozsah 200~μA & rozsah  2~mA \\\hline\hline
+        0,02&9319&2134&3763\\\hline
+        0,03&10598&1882&1670\\\hline
+        0,04&11071&1912&828\\\hline
+        0,05&11921&1966&503\\\hline
+        0,06&12253&2093&387\\\hline
+        0,07&12702&2202&349\\\hline
+        0,08&12787&2293&331\\\hline
+        0,09&14004&2359&322\\\hline
+        0,10&13078&2396&318\\\hline
+    \end{tabular}
+    \caption{Spočítaný vnitřní odpor ampérmetrů}
+    \label{tab:odpor}
+\end{table}
+
+\begin{graf}[h!]
+    \centering
+    \includegraphics[width=.8\textwidth]{graf_odpor.pdf}
+    \caption{Závislost naměřeného odporu na vstupním napětí}
+    \label{graf:odpor}
+\end{graf}
 
 \section{Závěrečné vyhodnocení}
+Zjistili jsme, že při měření malých proudů je měření zatíženo relativně velkou chybou. U ručičkového přístroje relativní chyba dosahovala hodnoty až 83\,\% a u číslicového přístroje šlo o relativní chybu 48\,\% v rozsahu \tmu A a 11\,\% v rozsahu 2\,mA.
 
 
 
